--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- CSS needs a link to this API, unsure how to add another without inline-->
    <style>
     #map{height: 600px;}
-    body{background-color: #81b29a;
+    body{background-color: #6d6875;
     color: rgb(243, 243, 235);
     font-family:Helvetica, sans-serif;}
     h1{
@@ -107,13 +107,13 @@
             else if (d >= 50000 && d < 75000){
                 return '#FC4E2A';
             }
-            else if (d >= 75000 && d < 120000){
+            else if (d >= 75000 && d < 200000){
                 return '#E31A1C';
             }
-            else if (d >= 120000 && d < 170000){
+            else if (d >= 200000 && d < 350000){
                 return '#BD0026';
             }
-            else if (d >= 170000){
+            else if (d >= 350000){
                 return '#800026';
             }
         }
